# CirrusStream

./: Dockerfile  Makefile  README.md  forticlient_installation.sh  forticlient_stream.sh  pyproject.toml  requirements.txt  setup.py
cirrus_stream/: cirrus_stream.py  cirrus_stream.sh  oc.sh
cirrus_stream/database/: SQLize.py  database_query.py  extract_transform_data.py
cirrus_stream/docs/: conf.py  requirements.txt  support.rst
cirrus_stream/etl/: SQLize.py  etl_data_s3.py  extract_transform_data.py  extract_transform_json_data.py  finalize.py  transform_csv_data_into_db.py  transform_json_data_into_csv_data.py
cirrus_stream/monitoring/: file_crawler.py  instance_log_monitoring.py  send_email.py
cirrus_stream/stream/: etl_and_move_data_s3.py  forticlient_stream.sh  send_data_s3.py  send_raw_data_s3.py  transfer_data.py  transform_and_move_data_s3.py
cirrus_stream/tests/: context.py  tests_advanced.py  tests_basic.py
data/: test_2024_05_16_10_22_bronze_log.json
docker/: compose.yaml
docs/: Makefile  conf.py  index.rst  install.rst  overview.rst
docs/source/: cirrus_stream.rst  conf.py  index.rst  install.rst  overview.rst  support.rst
docs/source/cirrus_stream/: requirements.txt
docs/source/cirrus_stream/etl/: etl.rst
docs/source/cirrus_stream/monitoring/: monitoring.rst
docs/source/cirrus_stream/stream/: stream.rst
docs/source/cirrus_stream/test/: test.rst
