[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cirrus_stream_throneofshadow"
version = "0.0.1"
authors = [
  { name="Brett Nelson", email="brett.nelson@yousolar.com" },
]
description = "Streaming, ETL, and databasing software written for YouSolar Engineering Department 2024."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/throneofshadow/CirrusStream"
Issues = "https://github.com/throneofshadow/CirrusStream/issues"